--- a/butok.html
+++ b/butok.html
@@ -48,6 +48,49 @@
         color: #666;
         /* Text color for the second column */
     }
+
+            
+    ul {
+            list-style: none;
+        }
+
+        ul>li {
+            text-align: left;
+            padding-left: 10px;
+        }
+
+        .td-table {
+            padding: 0 !important;
+            margin: 0 !important;
+        }
+
+        .project-introduce td table {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            border-collapse: collapse;
+        }
+
+        .project-introduce td table tr td:first-child {
+            background-color: #f2f2f2 !important;
+            /* 배경색 제거 */
+        }
+
+        .project-introduce td table tr td:last-child {
+            padding: 0 50px;
+            /* 셀 패딩 추가 */
+        }
+
+        .example-img {
+            width: 50vw;
+            padding: 20px 0;
+        }
+
+        .ui {
+            width: 50vw !important;
+            max-width: fit-content;
+        }
 </style>
 <body>
     <div class="project-container">
@@ -66,8 +109,27 @@
                     <td>2023년 4월 27일 → 2023년 5월 15일</td>
                 </tr>
                 <tr>
-                    <td><strong>태그</strong></td>
-                    <td>AWS, GitHub, JPA, JSP, Java, JavaScript, MySQL, SpringBoot, SpringSecurity</td>
+                    <td><strong>사용 기술</strong></td>
+                    <td class="td-table">
+                        <table>
+                            <tr>
+                                <td><strong>Languages</strong></td>
+                                <td>Java, Vanilla JS</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Frameworks & Libraries</strong></td>
+                                <td>SpringBoot, SpringSecurity, JPA</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Databases</strong></td>
+                                <td>MySQL, AWS RDS</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Other Technologies</strong></td>
+                                <td>JSP, AWS EC2, AWS S3</td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
                 <tr>
                     <td><strong>한 줄 설명</strong></td>
@@ -75,7 +137,7 @@
                 </tr>
                 <tr>
                     <td><strong>개발 인원(역할)</strong></td>
-                    <td>4명 (팀장)</td>
+                    <td>🙋‍♀️🙋‍♂️🙋🙋‍♀️ 4명 (팀장)</td>
                 </tr>
                 <tr>
                     <td><strong>Github</strong></td>
@@ -84,29 +146,48 @@
             </table>
         </section>
         <section class="project-description">
+            <img class="ui" src="resources/images/butok-ui.png" alt="프로젝트 이미지">
+            <br>
             <h2>📖 프로젝트 소개</h2>
-            <p>부동산 전월세 실거래가 확인 플랫폼으로 원하는 지역을 검색하여 해당 지역의 전월세 실거래가를 볼 수 있습니다.</p>
-            <p>지역 검색: 지도를 통해 원하는 지역을 선택하여 부동산 매물에 대한 정보를 확인할 수 있습니다.</p>
-            <p>전세 실거래가: 그래프를 통해 전세 가격의 변동을 시간에 따라 확인할 수 있습니다.</p>
-            <p>월세 실거래가: 월세 거래 내역을 상세히 살펴볼 수 있습니다.</p>
-            <p>댓글 작성: 각 매물에 대해 댓글을 작성하여 다른 사용자들과 소통할 수 있습니다.</p>
-            <p>관심 매물 등록: 관심 있는 매물을 등록하여 추후에 쉽게 찾아볼 수 있습니다.</p>
-            <p>부동산 선호 설정: 회원가입 시 사용자는 부동산 선호사항을 설정할 수 있습니다. 이를 토대로 선호 기반 매물을 검색할 수 있습니다.</p>
+            <p><strong>부동산 전월세 실거래가 확인 플랫폼</strong>으로 원하는 지역을 검색하여 해당 지역의 전월세 실거래가를 볼 수 있습니다.</p>
+            <br>
+            <p><strong>지역 검색</strong>: 지도를 통해 원하는 지역을 선택하여 부동산 매물에 대한 정보를 확인할 수 있습니다.</p>
+            <br>
+            <p><strong>전세 실거래가</strong>: 그래프를 통해 전세 가격의 변동을 시간에 따라 확인할 수 있습니다.</p>
+            <br>
+            <p><strong>월세 실거래가</strong>: 월세 거래 내역을 상세히 살펴볼 수 있습니다.</p>
+            <br>
+            <p><strong>댓글 작성</strong>: 각 매물에 대해 댓글을 작성하여 다른 사용자들과 소통할 수 있습니다.</p>
+            <br>
+            <p><strong>관심 매물 등록</strong>: 관심 있는 매물을 등록하여 추후에 쉽게 찾아볼 수 있습니다.</p>
+            <br>
+            <p><strong>부동산 선호 설정</strong>: 회원가입 시 사용자는 부동산 선호사항을 설정할 수 있습니다. 이를 토대로 선호 기반 매물을 검색할 수 있습니다.</p>
+            <br>
         </section>
         <section class="role">
             <h2>🙋‍♂️ 역할</h2>
-            <p>회원의 선호 기반 매물 추천, 보안, 회원 관련 기능 구현</p>
+            <br>
+            <p>회원의 선호 기반 매물 추천</p>
+            <br>
+            <p>보안, 회원 관련 기능 구현</p>
+            <br>
         </section>
-        <br>
-        <img class="ui" src="resources/images/toktok.png" alt="프로젝트 이미지">
         <br>
         <section class="tech-review">
             <h2>🎯 기술 리뷰</h2>
-            <p>[Spring security 적용]</p>
-            <p>Spring security 2.7 버전을 사용하여 비밀번호를 암호화 하였으며, 회원과 관리자의 역할을 나눠 관리자 페이지의 접근을 막았습니다. 그 과정에서 필요한 config 파일 작성 방법과 보안 처리를 익힐 수 있었으며, jsp에서 spring security tag library를 활용하여 간편하게 권한 확인을 할 수 있었습니다.</p>
             <br>
-            <p>[pageable을 활용한 pagination 처리]</p>
-            <p>Pageable을 이용하여 페이지네이션 처리를 구현하였습니다. 전월세 데이터가 많이 존재하는 경우 페이지네이션으로 데이터를 효율적으로 관리하고 사용자에게 보다 편리한 서비스를 제공할 수 있었습니다.</p>
+            <p><strong>[Spring security 적용]</strong></p>
+            <br>
+            <p>Spring security 2.7 버전을 사용하여 <strong>비밀번호를 암호화</strong> 하였으며, 
+            <strong>회원과 관리자의 역할</strong>을 나눠 관리자 페이지의 접근을 막았습니다. 
+                그 과정에서 필요한 config 파일 작성 방법과 보안 처리를 익힐 수 있었으며, 
+                jsp에서 spring security tag library를 활용하여 <strong>간편하게 권한 확인을</strong> 할 수 있었습니다.</p>
+            <br>
+            <p><strong>[pageable을 활용한 pagination 처리]</strong></p>
+            <br>
+            <p>Pageable을 이용하여 <strong>페이지네이션 처리를 구현</strong>하였습니다. 
+                전월세 데이터가 많이 존재하는 경우 페이지네이션으로 데이터를 효율적으로 관리하고 사용자에게 보다 
+                편리한 서비스를 제공할 수 있었습니다.</p>
         </section>
     </div>
 </body>
