--- a/mommyletter.html
+++ b/mommyletter.html
@@ -158,7 +158,7 @@
             <br>
             <p><strong>[Gerrit을 활용한 코드 리뷰]</strong></p>
             <br>
-            <p>Google에서 개발한 코드 리뷰 툴인 Gerrit을 활용하여 프로젝트의 코드 리뷰를 진행하였습니다.
+            <p>Google에서 <strong>개발한 코드 리뷰 툴</strong>인 <strong>Gerrit</strong>을 활용하여 프로젝트의 코드 리뷰를 진행하였습니다.
                 Github의 Pull Request나 Gitlab의 Merge Request만 활용하여 코드 리뷰를 해오다가 
                 처음으로 코드 리뷰 툴을 활용해볼 수 있었습니다. 
                 커밋 단위로 신속하게 코드 리뷰를 하며 피드백을 받아볼 수 있었으며, 리뷰를 하지 않으면 레포지토리에 올라가지 않아 
