--- a/toby.html
+++ b/toby.html
@@ -213,14 +213,14 @@
             </ul>
             <br><br>
             <h2>🎯 기술 리뷰</h2>
-            <p>[Docker 컨테이너와 Nginx의 활용]</p>
+            <p><strong>[Docker 컨테이너와 Nginx의 활용]</strong></p>
             <br>
             <p>Python AI 서버의 구동 효율성을 높이기 위해 Docker Image를 분리했습니다. 
                 라이브러리, 모델 등 <strong>환경 설정 Image와 코드가 담기는 Image를 분리</strong>하고 
             <strong>Dockerfile에 환경 설정 Docker Image를 포함하여</strong> 서버 구동 시간을 줄일 수 있었습니다.<br><br>
                 또한, Docker Network 구성, Nginx 리버스 프록시 적용, SSL 인증서 발급을 통해 인프라 구축에 대한 실전 경험을 쌓을 수 있었습니다.</p>
             <br>
-            <p>[Jenkins 파이프라인을 이용한 CI/CD 구축]</p>
+            <p><strong>[Jenkins 파이프라인을 이용한 CI/CD 구축]</strong></p>
             <img class="example-img" src="resources/images/script.png">
             <br>
             <p>개발 과정에서 배포 시 발생하는 문제를 빠르게 볼 수 있도록 'feature/기능' 브랜치에 <strong>커밋이 발생</strong>하면 
@@ -229,7 +229,7 @@
                 서버에 환경 변수 파일을 올려두거나 파이프라인에 환경 변수를 직접 넣어주는 것은 보안 상 좋지 않다고 생각하여 
                 Jenkins의 <strong>Secrete File</strong>을 활용하였습니다.</p>
             <br>
-            <p>[PWA 서비스 워커의 캐시 문제 해결]</p>
+            <p><strong>[PWA 서비스 워커의 캐시 문제 해결]</strong></p>
             <br>
             <p>프론트엔드에서 PWA를 적용하면서 백엔드 요청을 프론트엔드의 캐시로 돌려주는 캐시 문제가 발생했습니다. 
                 프로젝트에서 발생하는 문제는 
@@ -238,7 +238,7 @@
                 이를 해결하기 위해 vite-pwa 공식 문서와 서비스 워커 설정 파일을 공부하여 <strong>백엔드로의 요청을 캐싱하지 않도록</strong> 구성했습니다. 
                 추후 다른 팀도 같은 문제를 겪고 있음을 인지하고 노션으로 배포하여 팀 간 공유하였습니다.</p>
             <br>
-            <p>[AI 물체 분석 결과 개선]</p>
+            <p><strong>[AI 물체 분석 결과 개선]</strong></p>
             <img class="example-img" src="resources/images/top5.png">
             <br>
             <p></p>
