--- a/gamja-market.html
+++ b/gamja-market.html
@@ -84,7 +84,7 @@
         }
 
         .example-img {
-            width: 50vw;
+            width: 100%;
             padding: 20px 0;
         }
 
@@ -134,8 +134,17 @@
                     <td>동네 중고 거래 사이트</td>
                 </tr>
                 <tr>
-                    <td><strong>개발 인원<br>(역할)</strong></td>
-                    <td>🙋‍♀️🙋‍♂️🙋🙋‍♀️ 4명 (팀장)</td>
+                    <td><strong>개발 인원</strong></td>
+                    <td class="td-table">
+                        <table>
+                            <tr>
+                                <td style="background-color: #ffffff !important;">
+                                    <p class="people">🙋‍♀️🙋‍♂️🙋🙋‍♀️</p>
+                                <td style="padding: 0 30px; background-color: #f2f2f2 !important;"><strong>역할</strong></td>
+                                <td>팀장</td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
                 <tr>
                     <td><strong>Github</strong></td>
