--- a/healthpanda.html
+++ b/healthpanda.html
@@ -87,7 +87,7 @@
         }
 
         .ui {
-            width: 50vw !important;
+            width: 100% !important;
             max-width: fit-content;
         }
     </style>
@@ -136,8 +136,17 @@
                     <td>카카오 챗봇을 활용한 헬스장 서비스</td>
                 </tr>
                 <tr>
-                    <td><strong>개발 인원<br>(역할)</strong></td>
-                    <td>🙋‍♀️🙋‍♂️ 2명 (팀원)</td>
+                    <td><strong>개발 인원</strong></td>
+                    <td class="td-table">
+                        <table>
+                            <tr>
+                                <td style="background-color: #ffffff !important;">
+                                    <p class="people">🙋‍♀️🙋‍♂️</p>
+                                <td style="padding: 0 30px; background-color: #f2f2f2 !important;"><strong>역할</strong></td>
+                                <td>팀원</td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
                 <tr>
                     <td><strong>Github</strong></td>
@@ -165,7 +174,7 @@
                 <li>웹 : 운동 추천 영상, 지점별 상담 예약, 이용 후기, 좋아요 및 팔로우</li>
             </ul>
             <br>
-            <h2>🙋‍♂️ 역할</h2>
+            <h2>🙋‍♂️ 담당 기능</h2>
             <p>챗봇 - 챗봇 개발 환경 구축, 식단 조회 및 기록, 식단 추천</p>
             <br>
             <p>웹 - HTTPS 배포, RDS 구축, JWT 토큰 적용, 운동 영상 추천, 좋아요 및 팔로우</p>
