--- a/butok.html
+++ b/butok.html
@@ -88,7 +88,7 @@
         }
 
         .ui {
-            width: 50vw !important;
+            width: 100% !important;
             max-width: fit-content;
         }
 </style>
@@ -137,7 +137,16 @@
                 </tr>
                 <tr>
                     <td><strong>개발 인원(역할)</strong></td>
-                    <td>🙋‍♀️🙋‍♂️🙋🙋‍♀️ 4명 (팀장)</td>
+                    <td class="td-table">
+                        <table>
+                            <tr>
+                                <td style="background-color: #ffffff !important;">
+                                    <p class="people">🙋‍♀️🙋‍♂️🙋🙋‍♀️</p>
+                                <td style="padding: 0 30px; background-color: #f2f2f2 !important;"><strong>역할</strong></td>
+                                <td>팀장</td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
                 <tr>
                     <td><strong>Github</strong></td>
