--- a/toby.html
+++ b/toby.html
@@ -81,7 +81,7 @@
         }
 
         .example-img {
-            width: 50vw;
+            width: 100%;
             padding: 20px 0;
         }
     </style>
@@ -149,8 +149,17 @@
                     <td>AI 퀴즈를 기반으로 한 미취학 아동 교육 서비스</td>
                 </tr>
                 <tr>
-                    <td><strong>개발 인원<br>(역할)</strong></td>
-                    <td>🙋‍♀️🙋‍♂️🙋🧞‍♀️🙋‍♂️🙋 6명 (팀장)</td>
+                    <td><strong>개발 인원</strong></td>
+                    <td class="td-table">
+                        <table>
+                            <tr>
+                                <td style="background-color: #ffffff !important;">
+                                    <p class="people">🙋‍♀️🙋‍♂️🙋🙋‍♀️🙋‍♂️🙋</p>
+                                <td style="padding: 0 30px; background-color: #f2f2f2 !important;"><strong>역할</strong></td>
+                                <td>팀장</td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
                 <tr>
                     <td><strong>Github</strong></td>
@@ -189,7 +198,7 @@
                 <li><strong>PWA</strong>를 적용하여 사용자 경험을 향상했습니다.</li>
             </ul>
             <br><br>
-            <h2>🙋‍♂️ 역할</h2>
+            <h2>🙋‍♂️ 담당 기능</h2>
             <p>스토리 관련 API 구현</p>
             <br>
             <p>서버 인프라 구축</p>
