--- a/index.html
+++ b/index.html
@@ -170,26 +170,23 @@
                                 </div>
                             </div>
                         </div>
-                        <button>Education</button>
+                        <button id="education-modal-button">Education</button>
+                        <div id="education-modal" class="toast-modal">
+                            <div class="toast-content">
+                                <span id="close-education" class="close-toast">&times;</span>
+                                <span>📖 Education</span>
+                                <ul class="toast-ul">
+                                    <li><b>Degree</b><br>
+                                        2016.03 ~ 2021.08 Kyunghee Univ. Philosophy
+                                    </li>
+                                    <li><b>Certificates</b><br>
+                                        정보처리기사(2024)<br>
+                                        SQLD(2023)
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                    <li>
-                        <h4>⛏️ Skills</h4>
-
-                    </li>
-                    <li>
-                        <h4>📖 Education</h4>
-                        <ul>
-                            <li>2016.03 ~ 2021.08 Kyunghee Univ. Philosophy</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <h4>🏅 Certificates</h4>
-                        <ul>
-                            <li>SQLD(2023)</li>
-                            <li>정보처리기사 필기(2023)</li>
-                        </ul>
-                    </li>
-                    </ul>
                 </article>
             </section>
             <section class="projects">
