--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
                                     <li><b>Degree</b><br>
                                         2016.03 ~ 2021.08 Kyunghee Univ. Philosophy
                                     </li>
+                                    <li><b>Bachelor's Thesis</b><br>
+                                        데카르트의 생각하는 존재와 AI
+                                    </li>
                                     <li><b>Certificates</b><br>
                                         정보처리기사(2024)<br>
                                         SQLD(2023)
