--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                         <p style="font-weight: bold;">Languages</p>
                                         <ul>
                                             <li style="color: rgb(3, 199, 144); font-weight: bold;">Java</li>
-                                            <li>Vanila JS</li>
+                                            <li>Vanilla JS</li>
                                             <li>Python
                                             </li>
                                         </ul>
