--- a/mommyletter.html
+++ b/mommyletter.html
@@ -160,9 +160,11 @@
             <p><strong>[그룹채팅 기능 추가]</strong></p>
             <br>
             <p>1:1 채팅 기능을 개발하던 중간에 <strong>그룹채팅 기능을 추가</strong>하게 되었습니다.
-                이를 위해 Kafka <strong>컨슈머를 1:1 채팅용과 그룹채팅용으로 분리</strong>하여 용도에 맞게 컨슈머의 <strong>batch를 튜닝</strong>했습니다.
-                또한 채팅방 엔티티를 만들고 토픽과 메시지 리스너 코드를 수정하였습니다.
-                이 경험을 통해 <strong>구체적이고 확정된 설계의 중요성</strong>을 깨달았습니다.
+                이를 위해 채팅방 엔티티를 만들고 1:1 채팅 및 그룹 채팅에서 활용할 수 있게 하였습니다.
+                또한 토픽과 메시지 리스너 코드를 추가했습니다.
+
+                추후 유지보수를 하며 Kafka 컨슈머를 1:1 채팅용과 그룹채팅용으로 분리하여 용도에 맞게 컨슈머의 <strong>batch를 튜닝</strong>했습니다.
+                이를 통해 1:1 채팅은 메시지를 빠르게 처리해 신속성을 높였으며, 그룹 채팅은 큰 규모로 처리해 안정성을 높였습니다.
             </p>
             <br>
             <p><strong>[Gerrit을 활용한 코드 리뷰]</strong></p>
