--- a/omegi.html
+++ b/omegi.html
@@ -201,6 +201,8 @@
             <h2>🙋‍♂️ 담당 기능</h2>
             <p>Java Instrumentation 제작</p>
             <br>
+            <p>로그 수집·가공·저장 파이프라인 구축</p>
+            <br>
             <p>정상 응답 가공 및 전송 로직 구현</p>
             <br>
             <p>서버 인프라 구축</p>
@@ -213,44 +215,77 @@
             <img class="ui" src="resources/images/omegi_architecture.jpg">
             <br>
             <ul>
-                <li><strong>모든 요청의 로그가 수신</strong>될 때까지 Kafka 메시지를 <strong>Elasticsearch에 저장</strong>하고, <strong>Redis 작업 큐</strong>에 작업을 올려둡니다</li>
-                <li>모든 요청이 들어오면 가공하여 <strong>MongoDB에 에러 데이터</strong>를, <strong>MySQL에 에러 정보</strong>를 저장합니다</li>
-                <li>RabbitMQ로 메인 서버에 <strong>에러 발생</strong>을 알립니다</li>
-                <li>메인 서버의 Redis는 사용자의 <strong>리프레시 토큰을 저장</strong>하는 용도입니다</li>
+                <li><strong>하나의 요청과 관련된 모든 로그가 수신</strong>될 때까지 Kafka 메시지를 <strong>Elasticsearch에 저장</strong>하고, <strong>Redis 작업 큐</strong>에 작업을 올려둡니다</li>
+                <li>로그 수신이 완료되면 가공하여 <strong>MongoDB에 에러 데이터</strong>를, <strong>MySQL에 에러 정보</strong>를 저장합니다</li>
+                <li>RabbitMQ로 메인 서버에 <strong>새로운 에러 발생</strong>을 알립니다</li>
             </ul>
             <br><br>
             <h2>🎯 기술 리뷰</h2>
-            <p><strong>[Custom JavaAgent 제작]</strong></p>
+            <p><strong>1. JavaAgent를 활용한 ‘자동 로그 관측기’ 제작</strong></p>
+            <p>Github Link : <a href="https://github.com/TeamOmegi/Instrumentation-Java">https://github.com/TeamOmegi/Instrumentation-Java</a></p>
             <img class="example-img" src="resources/images/javaagent.png">
             <br>
-            <p>Opentelemetry에서 제공하는 자동 계측기 JavaaAgent를 기반으로 Custom JavaAgent를 구성했습니다.<br>
-                프로젝트에 맞게 커스텀한 <strong>로그 수출 Exporter</strong>, 다른 서버로 넘기는 <strong>요청의 추적을 돕는 Propagator</strong>,<br> 
-                <strong>메소드 단위 계측</strong>을 가능하게 하는 <strong>Extension</strong>을 제작하고 메타 정보를 수정하여 새로운 JavaAgent를 만들었습니다.
+            <p>기존에 존재하는 OpenTelemetry의 JavaAgent 자동 관측기를 새로 구성하여, 저희프로젝트 취지에 맞는 새로운 자동 관측기를 제작했습니다.</p>
+            <br>
+            <p>새로운 기능 :</p>
+            <p>(1) 단순 모니터링을 넘어, 왜 오류가 발생했는지를 파악하는 <strong>Observability의 본질에 충실한 오류 추적 기능</strong>을 넣고 싶었습니다.
+                OpenTelemetry는 기본적으로 요청이 처음 들어온 메소드, DB 접근 등에 대해 로그를 제공합니다.
+                이를 확장해 <strong>요청이 흘러가는 모든 메소드를 관측하여 오류의 원인을 쉽게 파악</strong>할 수 있게 만들었습니다. 바이트 코드 조작 도구인 ByteBuddy를 활용해 메소드의 정보, 파라미터 타입, 아규먼트를 로그에 담았으며,
+                그 외에도 오류 발생 지점, 구체적인 오류 내용을 담은 상세한 로그를 구상했습니다.
+            </p>
+            <br>
+            <p>
+                (2) OpenTelemetry는 이미 OTLP, Jaeger, 콘솔 등 다양한 Exporter를 지원하고 있었지만, 저희 프로젝트와의 연동을 위해 Kafka Exporter를 추가했습니다.
+            </p>
+            <br>
+            <p>
+                (3) OpenTelemetry에서 추적 정보를 전파하는 Propagator를 활용해 요청이 다른 애플리케이션으로 이동한 경우에도 해당 요청의 정보를 전달받을 수 있도록 구성했습니다. 이를 통해 MSA와 같은 분산 환경과 Java -> Python 등 다른 언어 기반 애플리케이션으로 요청이 이동할 때도 <strong>하나의 요청을 하나의 정보로 일관되게 유지</strong>했습니다.
+            </p>
+            <br>
+            <p>
+                (4) 사용자가 자신의 애플리케이션을 전혀 수정하지 않아도 되도록 JavaAgent 적용 시 넣어줄 수 있는 사용자 옵션(로그 내보내기 방법, 로그를 보낼 서버, 오류 외 정상 로그 내보내기 여부, 정상 로그 수집 빈도 등)을 제공해 자동 관측기를 완성했습니다.
             </p>
             <br>
             <br>
-            <p><strong>[Kafka Consumer 확장]</strong></p>
+            <p>어려웠던 점 :</p>
             <br>
-            <p>기존에는 단일 파티션에 단일 컨슈머를 두고 있어 1초에 약 400개의 메시지 밖에 처리할 수 없어 여유 메모리 1GB 안에서 Kafka의 성능을 높이고자 하였습니다.<br><br>
-                데이터의 크기를 10KB로 가정하고 <strong>파티션을 1개 늘릴 때 약 2MB의 메모리</strong>를, 
-                <strong>Consumer Thread를 1개 늘릴 때 약 60MB 메모리</strong>를 더 사용하는 것으로 계산했습니다.
-                컨슈머 스레드와 파티션을 10개로 두었을 때 <strong>1초에 약 1104개</strong>의 메시지를 소비할 수 있으며, 
-                메모리 사용량은 약 600(Thread) + 32(Buffer) + 20MB(Segment & Index) = <strong>652MB</strong>입니다.<br><br>
-                컨슈머 개수가 많아질수록 처리량이 완만하게 증가하기 때문에 효용을 고려해 10개의 컨슈머를 두기로 결정하였습니다.
+            <p>가장 큰 난관은 OpenTelemetry의 JavaAgent를 커스터마이징하는 방법을 찾는 것이었습니다. 개발 가능 여부가 불확실하여 사흘의 검증 기간을 설정하고 레퍼런스를 조사했습니다. Github의 여러 코드를 분석하며 JavaAgent의 구성, 빌드 의존성, 메타 정보 수정 방법 등을 알아냈습니다.</p>
+            <br>
+            <p>
+                이 프로젝트를 통해 두 가지를 깨달았습니다. <strong>첫째, 개발 가능성이 불확실할 때 적절한 검증 기간을 설정하는 것의 중요성입니다.</strong> 만약 개발에 실패했더라도 빠르게 다른 방향을 모색할 수 있었기 때문입니다. 이는 프로젝트 관리와 팀워크 측면에서도 중요한 교훈이 되었습니다.
+            </p>
+            <br>
+            <p>
+                <strong>둘째, 다양한 레퍼런스 확보의 중요성입니다.</strong> 단순히 코드를 수정하고 실행해보는 시행착오 방식으로는 진전을 이루기 어려웠습니다. OpenTelemetry에 국한되지 않고 JavaAgent를 다루는 다양한 오픈소스 프로젝트들을 탐색하면서 JavaAgent의 빌드 방법, 사용자 옵션 추가 방법 등의 정보들을 발견할 수 있었습니다. 이로써 무에서 유를 창조하는 것이 아니라 기존의 다양한 지식과 경험을 새로운 맥락에서 재해석하고 조합하는 것이 핵심이라는 교훈을 얻었습니다.
             </p>
             <br>
             <br>
-            <p><strong>[배치 및 스케줄러 도입]</strong></p>
+            <p><strong>2. 로그 수집·가공·저장 파이프라인 구축 - Batch 및 Scheduler 도입</strong></p>
             <img class="example-img" src="resources/images/flow.png">
             <br>
-            <p>프로젝트에서 정상 응답 로그는 <strong>서비스의 흐름도를 갱신</strong>하는 역할을 합니다.
-                때문에 긴급한 처리가 필요하지 않아 <strong>배치와 스케줄러</strong>를 사용해 요청을 모아서 처리했습니다.<br><br>
-                Kafka Producer는 사용자 지정 간격에 따라 서비스 정상 로그를 내보내며, 1MB의 Max Batch Size로 <strong>모아서 처리</strong>됩니다.
-                한 개의 정상 로그가 수집 서버로 들어오면 <strong>Elasticsearch에 저장 후 스케줄을 등록</strong>합니다.
-                지정된 시간 후 Elasticsearch에 <strong>같은 요청 번호를 검색</strong>하고 요청이 <strong>하나의 흐름으로 연결</strong>된다면 
-                서비스 흐름 엔티티를 확인해 갱신합니다.
+            <p>에러 로그를 다루는 서비스이지만, 사용자의 선택에 따라 정상 응답 로그를 수집합니다. 프로젝트에서 정상 응답 로그는 사용자 애플리케이션의 <strong>서비스 흐름도를 갱신하는 역할</strong>을 합니다. 오류 로그로만 서비스 트리가 갱신된다면, 오류가 발생하지 않는 신규 서비스는 트리에 등록되지 않기 때문입니다. 때문에 정상 응답 로그를 간헐적으로 내보내는 설정을 주고 서비스 트리에 이를 반영했습니다.
             </p>
             <br>
+            <p>
+                이러한 특징 때문에 하나의 요청에 관련된 모든 로그가 도착했는지를 확인하는 방식을 오류 로그와 다르게 처리했습니다.오류 로그는 Redis 작업 큐를 활용해 모든 로그가 도착했는지 자주 빠르게 확인한다면, 정상 로그는 <strong>배치와 스케줄러</strong>를 사용해 비교적 느리게 지정된 간격마다 처리했습니다.
+            </p>
+            <br>
+            <p>Kafka Producer는 사용자 지정 간격에 따라 서비스 정상 로그를 내보내며, 1MB의 Max Batch Size로 모아서 처리됩니다. 한 개의 정상 로그가 수집 서버로 들어오면 ElasticSearch에 저장 후 스케줄을 등록합니다. 지정된 시간 후 ElasticSearch에 같은 요청 번호를 검색하고 요청이 하나의 흐름으로 연결된다면 서비스 흐름 엔티티를 확인해 갱신합니다.
+            </p>
+            <br>
+            <br>
+            <p><strong>3. Kafka Consumer 확장</strong></p>
+            <br>
+            <p>비록 실사용자가 없는 프로젝트였지만, 사용자를 가정하고 여유 메모리 1GB 안에서 Kafka의 성능을 높여보는 고민을 해보고 싶었습니다. 기존에는 단일 컨슈머 스레드를 두고 있어 1초에 약 400개의 메시지 밖에 처리할 수 없었습니다.
+            </p>
+            <br>
+            <p>
+                데이터의 크기를 10KB로 가정하고 Consumer Thread를 1개 늘릴 때 약 60MB 메모리를 더 사용하는 것으로 계산했습니다. 컨슈머 스레드와 파티션을 5개로 두었을 때 1초에 약 927개의 메시지를 소비할 수 있으며, 메모리 사용량은 약 300(Thread) + 32(Buffer) + 20MB(Segment & Index) = 352MB입니다.
+            </p>
+            <br>
+            <p>
+                10개 스레드는 5개 대비 메모리를 2배 사용하지만, 성능은 19% 정도만 향상되기 때문에 효용을 고려해 5개의 컨슈머를 두기로 결정하였습니다.
+            </p>
             <p><strong>[Gerrit 리뷰 자동 기록]</strong></p>
             <img class="example-img" src="resources/images/gerrit.png">
             <br>
